--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <div class="container" id="jsinfos">
         <div class="row">
             <div class="span6">
-                <h4> ಕಸ್ತೂರಿ ಪತ್ರಿ‌ಕೆಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು</h4>
+                <h4>ಕಸ್ತೂರಿ ಪತ್ರಿ‌ಕೆಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು</h4>
                 <hr>
-                <p> " ಕಸ್ತೂರಿ ಪತ್ರಿ‌ಕೆಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳ ಸುಲಭ ಲಭ್ಯತೆಗೆ ಡಿಜಿಟಲ್ ಸಂಚಯವನ್ನು ಸೃಷ್ಟಿಸಲಾಗಿದೆ‍!. ಈ ಕಾರ್ಯಕ್ಕೆ ಆಸಕ್ತರು, ಪುಸ್ತಕಗಳನ್ನು ಹೊಂದಿರುವವರು,
-                ನಮ್ಮ ತಾಂತ್ರಿಕ ಕೆಲಸಗಳಿಗೆ ಸಹಕರಿಸುವವರು, ಯಾರು ಬೇಕಾದರೂ ಕೈ ಜೋಡಿಸಬಹುದು. ಸಂಪರ್ಕಿಸಿ dev@sanchaya.net</p>
+                <p> "ಕಸ್ತೂರಿ ಪತ್ರಿ‌ಕೆಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳ ಸುಲಭ ಲಭ್ಯತೆಗೆ ಡಿಜಿಟಲ್ ಸಂಚಯವನ್ನು ಸೃಷ್ಟಿಸಲಾಗಿದೆ‍!. ಈ ಕಾರ್ಯಕ್ಕೆ ಆಸಕ್ತರು, ಪುಸ್ತಕಗಳನ್ನು ಹೊಂದಿರುವವರು,
+                ನಮ್ಮ ತಾಂತ್ರಿಕ ಕೆಲಸಗಳಿಗೆ ಸಹಕರಿಸುವವರು, ಯಾರು ಬೇಕಾದರೂ ಕೈ ಜೋಡಿಸಬಹುದು. ಸಂಪರ್ಕಿಸಿ dev@sanchaya.net"</p>
             </div>
             <div class="span6">
                 <a href="https://twitter.com/share" class="twitter-share-button" data-text="ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು - ಸಂಚಯದ ಪುಸ್ತಕ ಡಿಜಿಟಲೀಕರಣ ಯೋಜನೆಯ ಭಾಗವಾಗಿದೆ"‍ data-via="_sanchaya"></a>
